<resources>
    <string name="app_name">Fit Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="exercise">Exercise</string>
    <string name="weighin">Weigh In</string>

    <string name="test_banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="hint_workout">hint workout</string>
    <string name="action_submit">Submit</string>
    <string name="title_enter_post">Workout</string>

    <string name="hint_word">Weight amount...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Weight not saved because it is empty.</string>
    <string name="appwidget_text">Your current weight:</string>
    <string name="widget_weight">Latest Weight Results</string>
    <string name="track_it">Track It</string>
    <string name="no_weight_added">No weight added.</string>
    <string name="search">Search</string>
    <string name="floating_action_button">floating action button</string>
    <string name="button_clicked">Button clicked.</string>
    <string name="appwidget_name">Fit Widget</string>
    <string name="weighin_text">Add current weight for this week:</string>

</resources>
